# ORM-Capital-Calculation-Engine

./: Dockerfile  Makefile  README.md  TASK_17_PARAMETER_GOVERNANCE_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TASK_5_LOSS_DATA_MANAGEMENT_SUMMARY.md  TASK_7_JOB_MANAGEMENT_SUMMARY.md  TASK_8_AUDIT_LINEAGE_SUMMARY.md  TASK_9_LEGACY_METHODS_SUMMARY.md  TEST_DRIVEN_DEVELOPMENT_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  start_server.py  test_override_basic.py  test_performance_simple.py  verify_implementation.py
data/: orm_calculator.db
deployment/kubernetes/: orm-calculator.yaml
deployment/logging/: fluentd.conf  logrotate.conf  rsyslog.conf
deployment/monitoring/: alert_rules.yml  prometheus.yml
deployment/monitoring/grafana/dashboards/: orm-calculator-dashboard.json
deployment/scripts/: health-check.ps1  health-check.sh
docs/: README.md  api-documentation.md  calculation-methods.md  consolidation.md  deployment-checklist.md  deployment-guide.md  openapi.json  performance_optimization.md  security.md  sma_calculator.md  user-guide.md
migrations/: env.py
migrations/versions/: 003_add_consolidation_tables.py  004_add_supervisor_override_tables.py  65a2f8aef728_initial_database_schema.py  b45ba1e4db4c_create_core_data_models.py  create_parameter_governance_tables.py  fee874e62242_initial_database_schema.py
scripts/: create_parameter_tables.py  demo_loss_data_management.py  demo_sma_calculator.py  format-code.py  generate-openapi.py  init-database.py  init-db.sql  migrate-database.py  run-tests.py  setup-dev.py  start-server.py  test-models.py  test-pydantic-models.py  verify-setup.py
src/orm_calculator/: config.py  main.py
src/orm_calculator/api/: __init__.py  analytics_routes.py  calculation_routes.py  consolidation_routes.py  health_routes.py  lineage_routes.py  loss_data_routes.py  override_routes.py  parameter_routes.py  performance_routes.py  routes.py
src/orm_calculator/automation/: __init__.py  code_analyzer.py  test_automation.py  workflow_orchestrator.py
src/orm_calculator/core/: __init__.py  cache.py  concurrent_processing.py  database_optimization.py  performance.py
src/orm_calculator/database/: __init__.py  connection.py  models.py  repositories.py
src/orm_calculator/models/: entity_models.py  orm_models.py  override_models.py  parameter_models.py
tests/: __init__.py  conftest.py  run_10k_tests.py  run_comprehensive_tests.py  test_analytics_service.py  test_api.py  test_comprehensive_framework.py  test_consolidation.py  test_database.py  test_job_api_integration.py  test_job_management.py  test_lineage_api.py  test_lineage_service.py  test_loss_data_management.py  test_loss_data_service.py  test_parameter_governance.py  test_parameter_management.py  test_performance_optimization.py  test_report.json  test_security.py  test_sma_calculator.py  test_sma_integration.py  test_supervisor_overrides.py  test_task_4_integration.py  validate_task_10.py
tests/framework/: automated_fix_recommender.py  automated_test_framework.py  chaos_tester.py  comprehensive_test_executor.py  performance_analyzer.py  property_based_tests.py  regulatory_validator.py  security_scanner.py  synthetic_data_generator.py
tests/integration/: test_legacy_methods_api.py  test_sma_complete_workflow.py
tests/performance/: test_sma_performance.py
tests/regulatory/: test_rbi_compliance.py
tests/unit/: test_bia_calculator.py  test_sma_bic_calculation.py  test_sma_business_indicator.py  test_sma_loss_component_ilm.py  test_tsa_calculator.py  test_unified_calculator.py
